# CUDA_Optical_Flow_Performance_Analysis

./: .gitignore  CMakeLists.txt  README.md  main.cu
output/: bilinearFilterCPU.csv  bilinearFilterGPU.csv  convolutionCPU.csv  convolutionGPU_Constant.csv  convolutionGPU_Tiled.csv  convolutionGPU_Unoptimized.csv  gaussianPyramidCPU.csv  gaussianPyramidGPU.csv  grayScaleAvgCPU.csv  grayScaleAvgGPU.csv  srmCPU.csv  srmGPU.csv  srmGPU_Tiled.csv  totalOptFlowCPU.csv  totalOptFlowGPU.csv
